--- a/src/main/resources/static/css/item_list_post.css
+++ b/src/main/resources/static/css/item_list_post.css
@@ -40,37 +40,17 @@
 
 .name_post_item_list {
     font-size: 20px;
-    margin-top: 10px;
-    margin-left: 60px;
+    margin-top: 15px;
+    margin-left: 75px;
     text-align: left;
-}
-
-.main_div_post_item_list {
-    display: flex;
-    align-content: center;
-    margin-left: 50px;
-    margin-top: -5px;
-}
-
-.icon_div_post_item_list {
-    width: 5%;
-    align-content: end;
-    margin-top: -3px;
-    margin-right: -3px;
-}
-
-.date_div_post_item_list {
-    width: 15%;
-    align-content: start;
-    margin-left: 11px;
-    font-size: 16px;
 }
 
 .date_p_post_item_list {
     font-size: 16px;
-    margin-top: -5px;
-    margin-left: 0px;
+    margin-top: -15px;
+    margin-left: 75px;
     text-align: start;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 /* Кнопка лайка */
