--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -20,7 +20,6 @@ a {
 }
 
 
-
 /* Прокрутка элементов и стили скролла. Нужно изменять height при использовании!!!*/
 .scroll {
     height: 100px;
@@ -33,18 +32,23 @@ a {
     width: 1px;
 }
 .scroll::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 1px rgba(0,0,0,3);
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
 }
 .scroll::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 1px rgba(0,0,0,3);
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
 }
 
 ::-webkit-scrollbar {
-    width: 1px;
+    width: 10px;
+    background-color: var(--second-color);
 }
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    border-radius: 10px;
+    background-color: var(--background-color);
 }
 ::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 1px rgba(0,0,0,0.9);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    background-color: var(--second-color);
 }
