--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/search.css}"/>
     <link rel="stylesheet" th:href="@{/css/button.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
     <!--Картинки-->
     <script src="https://kit.fontawesome.com/9e56eb5395.js" crossorigin="anonymous"></script>
@@ -34,7 +35,7 @@
             </div>
             <div class="col-3">
                 <img src="/image/cat-icon.png" alt="Тут должна сидеть кошка!" height="95px"
-                     style="margin-top: -15px; margin-left: -50px;"/>
+                     style="margin-top: -18px; margin-left: -50px;"/>
             </div>
             <div class="col-3">
             </div>
@@ -72,7 +73,7 @@
         </div>
     </div>
 </header>
-<body style="background: var(--background-color);">
+<body style="background: var(--background-color); overflow: hidden;">
 <br/>
 <br/>
 <br/>
@@ -139,7 +140,7 @@
                 </form>
             </div>
 
-            <!--Сообщества пользователя-->
+            <!--&lt;!&ndash;Сообщества пользователя&ndash;&gt;
             <div class="block_div" style="height: 440px;">
                 <div class="block_div_no_color">
                     <br/>
@@ -182,7 +183,7 @@
                     </tr>
                     </tbody>
                 </table>
-            </div>
+            </div>-->
         </div>
 
         <div class="col-4">
