--- a/src/main/resources/static/css/group.css
+++ b/src/main/resources/static/css/group.css
@@ -72,7 +72,7 @@ input[type="file"] {
     position:relative;
 }
 .bet_time {
-    position:absolute;
-    top:10px;
-    right:10px;
+    float: right;
+    margin-top:10px;
+    margin-right:10px;
 }
