--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -56,7 +56,8 @@ header ul li ul li {
     width: 100%;
 }
 header ul li ul li a {
-    padding: 10px;
+    position: relative;
+    padding: 5px;
     background: var(--background-color);
     color: var(--main-color);
 }
