--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,19 +23,26 @@ a {
 /* Прокрутка элементов и стили скролла. Нужно изменять height при использовании!!!*/
 .scroll {
     height: 100px;
+    margin-left: -5px;
     display: block;
     overflow-y: auto;
     overflow-x: hidden;
     white-space: normal;
 }
 .scroll::-webkit-scrollbar {
-    width: 1px;
+    width: 10px;
+    margin-left: -50px;
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
 }
 .scroll::-webkit-scrollbar-track {
     box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    border-radius: 10px;
+    background-color: var(--background-color);
 }
 .scroll::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+    border-radius: 10px;
+    background-color: var(--second-color);
 }
 
 ::-webkit-scrollbar {
@@ -48,7 +55,24 @@ a {
     background-color: var(--background-color);
 }
 ::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
     border-radius: 10px;
     background-color: var(--second-color);
 }
+
+/* Скролл без тени */
+/*
+.scroll::-webkit-scrollbar {
+    width: 10px;
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
+}
+.scroll::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    border-radius: 10px;
+    background-color: var(--background-color);
+}
+.scroll::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    border-radius: 10px;
+    background-color: var(--second-color);
+}*/
