--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <hr class="block_line"/>
-                <table style="margin-top: -17px; margin-left: -2px; height: auto; max-height: 500px;" class="scroll">
+                <table style="margin-top: -17px; margin-left: -2px; height: auto; max-height: 500px; margin-right: 10px;" class="scroll">
                     <tbody>
                     <tr th:if="${groups.isEmpty()}">
                         </br>
@@ -141,13 +141,13 @@
 
         <div class="col-4">
             <!--Список сообществ пользователя-->
-            <div class="block_div" style="margin-top: 50px; margin-left: 50px; width: 365px; height: 500px; position: fixed;">
+            <div class="block_div" style="margin-top: 50px; margin-left: 50px; min-width: 365px; width: auto; max-width: 385px; height: 500px; position: fixed;">
                 <div class="block_div_no_color" style="margin-top: 0px;">
                     <br/>
                     <p class="block_p_no_color p-main-color">Мои сообщества</p>
                 </div>
                 <hr class="block_line"/>
-                <table style="margin-top: -17px; margin-left: -2px; height: 400px;" class="scroll">
+                <table style="margin-top: -17px; margin-left: -2px; height: 400px; margin-right: 10px;" class="scroll">
                     <tbody>
                     <tr th:if="${userLogin==null}">
                         </br>
