Update groups.html, add 3 col

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -188,7 +188,7 @@
 
         <div class="col-4">
             <!--Изменение темы-->
-            <div class="block_div" style="margin-left: 50px; height: 440px;">
+            <div class="block_div" style="margin-left: 30px; width: 385px; height: 440px;">
                 <div class="block_div_no_color">
                     <br/>
                     <p class="block_p_no_color p-main-color">Тема</p>
@@ -235,7 +235,7 @@
                     <div class="row">
                         <div class="mb-3 col-12 col-md-6">
                             <button type="submit" class="btn btn-primary"
-                                    style="margin-left: 110px;">
+                                    style="margin-left: 120px;">
                                 Сохранить
                             </button>
                         </div>
