--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -83,7 +83,7 @@
     <div class="row row-cols-auto">
         <div class="col-8" style="height: auto;">
             <!--Шапка сообщества-->
-            <div class="block_div" style="height: auto;">
+            <div class="block_div" style="height: auto; width: auto;">
                 <div class="block_div_color">
                     <div id="subButton">
                         <div th:if="${sub==true}">
@@ -157,7 +157,7 @@
 
         <div class="col-4">
             <!--Список сообществ-->
-            <div class="block_div" style="margin-top: 50px; margin-left: 50px; height: 500px; position: fixed;">
+            <div class="block_div" style="margin-top: 50px; margin-left: 30px; height: 500px; position: fixed;">
                 <div class="block_div_no_color" style="margin-top: 0px;">
                     <br/>
                     <p class="block_p_no_color p-main-color">Рекомендации</p>
