Add text toggle_button

--- a/src/main/resources/static/css/button_up_page.css
+++ b/src/main/resources/static/css/button_up_page.css
@@ -1,4 +1,4 @@
-/* Стили для кнопки "нверх" */
+/* Стили для кнопки "наверх" */
 .btn-up {
     position: fixed;
     background-color: var(--main-color);
