--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -220,3 +220,159 @@ label {
 #toggle_checkbox:checked + label #moon:before {
     background-color: #000;
 }
+
+
+/* Переключение цвета текста */
+/* CSS rules are kept repetitive so that you can get CSS rules for each button easily :) */
+
+* {
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+}
+
+*:focus {
+    outline: none;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background-color: #f1f9f9;
+}
+
+#app-cover {
+    display: table;
+    width: auto;
+    margin: 0px auto;
+    counter-reset: button-counter;
+}
+
+.row {
+    display: table-row;
+}
+
+.toggle-button-cover {
+    display: table-cell;
+    position: relative;
+    width: auto;
+    height: auto;
+    box-sizing: border-box;
+}
+
+.button-cover {
+    height: 50px;
+    margin: 20px;
+    background-color: var(--second-color);
+    box-shadow: 0 10px 20px -8px var(--second-color);
+    border-radius: 4px;
+}
+
+.button-cover:before {
+    counter-increment: button-counter;
+    content: counter(button-counter);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    color: #000;
+    font-size: 12px;
+    line-height: 1;
+    padding: 5px;
+}
+
+.button-cover,
+.knobs,
+.layer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.button {
+    position: relative;
+    top: 50%;
+    width: 74px;
+    height: 36px;
+    margin: -20px auto 0 auto;
+    overflow: hidden;
+}
+
+.button.r,
+.button.r .layer {
+    border-radius: 100px;
+}
+
+.button.b2 {
+    border-radius: 2px;
+}
+
+.checkbox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.knobs {
+    z-index: 2;
+}
+
+.layer {
+    width: 100%;
+    background-color: #fff;
+    transition: 0.3s ease all;
+    z-index: 1;
+}
+
+
+/* Кнопка переключения */
+#button-2 .knobs:before,
+#button-2 .knobs:after {
+    content: "Tt";
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 29px;
+    height: 29px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    padding: 9px 4px;
+    background-color: var(--main-color);
+    border-radius: 50%;
+    transition: 0.3s ease all;
+}
+
+/*#button-2 .knobs:before {
+    content: "Y";
+}
+
+#button-2 .knobs:after {
+    content: "B";
+}*/
+
+#button-2 .knobs:after {
+    right: -30px;
+    left: auto;
+    color: #000;
+    background-color: var(--main-color);
+}
+
+#button-2 .checkbox:checked + .knobs:before {
+    left: -28px;
+}
+
+#button-2 .checkbox:checked + .knobs:after {
+    right: 4px;
+}
+
+#button-2 .checkbox:checked ~ .layer {
+    background-color: #000;
+}
