--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -220,7 +220,16 @@
 
 
                     <div class="row">
-                        <div class="mb-3 col-12 col-md-6">
+                        <div class="mb-3 col-4 col-md-2">
+                            <div class="toggle-button-cover">
+                                <div class="button r" id="button-2"  style="margin-top: 14px; margin-left: 65px;">
+                                    <input type="checkbox" class="checkbox" />
+                                    <div class="knobs"></div>
+                                    <div class="layer"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3 col-6 col-md-6">
                             <input type="checkbox" id="toggle_checkbox">
                             <label for="toggle_checkbox">
                                 <div id="star">
