--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>IG</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
-    <link rel="stylesheet" th:href="@{/css/color.css}" />
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/color.css}"/>
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/search.css}"/>
     <script type="text/javascript" th:src="@{/js/getThemeFromCookie.js}"></script>
@@ -13,13 +13,15 @@
     <!--Шрифты-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap"
+          rel="stylesheet">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css"
+          integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
 
 </head>
 <header class="container-fluid">
@@ -29,7 +31,8 @@
                 <h1><a href="/">IG</a></h1>
             </div>
             <div class="col-3">
-                <img src="/image/cat-icon.png" alt="Тут должна сидеть кошка!" height="95px" style="margin-top: -18px; margin-left: -50px;"/>
+                <img src="/image/cat-icon.png" alt="Тут должна сидеть кошка!" height="95px"
+                     style="margin-top: -18px; margin-left: -50px;"/>
             </div>
             <div class="col-3">
             </div>
@@ -44,7 +47,7 @@
             </div>
             <nav class="col-4">
                 <ul>
-                    <li><a href="/groups">Сообщества</a> </li>
+                    <li><a href="/groups">Сообщества</a></li>
                     <li>
                         <div th:switch="${userLogin}">
                             <div th:case="null">
